post and event put and post sucesfully